fix: nav alignment & icon

--- a/JobFairApplication/src/app/components/nav/nav.component.scss
+++ b/JobFairApplication/src/app/components/nav/nav.component.scss
@@ -65,7 +65,6 @@ a.venue-name {
 .item-hover {
   a {
     width: 100%;
-    padding: 15px 0;
 
     &:hover {
       background-color: $color-light-red;
@@ -88,16 +87,25 @@ a.venue-name {
     padding: 0 10px;
 
     li {
-      padding: 15px 0;
       list-style: none;
       font-size: 18px;
       color: $color-light-black;
+      margin: 30px 0 40px 0;
+      padding: 10px 0;
     }
   }
 
   ul.nested {
+    padding: 0 30px;
+
+    &.active {
+      padding: 10px 30px;
+    }
+
     li {
-      padding-bottom: 0;
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 
@@ -120,23 +128,20 @@ a.venue-name {
 
   .caret::before {
     // content: "\25B6";
-    // background-image: "../../../assets/img/chevron-arrow-down.png";
+    background-image: "../../../assets/img/chevron-arrow-down.png";
+    width: 25px;
+    height: 25px;
     color: $color-light-red;
     display: inline-block;
     margin-right: 6px;
   }
 
   /* Rotate the caret/arrow icon when clicked on (using JavaScript) */
-.caret-down::before {
-  transform: rotate(90deg);
-}
+  .caret-down::before {
+    transform: rotate(90deg);
+  }
 
-  a {
-    font-size: 18px;
-    display: block;
-    width: 100%;
-    padding: 10px 0;
-
+  li {
     &:hover {
       // background-color: $color-light-red;
       border-bottom: 2px solid $color-light-red;
@@ -144,6 +149,23 @@ a.venue-name {
       // color: $color-light-black;
       width: 90%;
       transition: 0.2s;
+    }
+  }
+
+
+  a {
+    font-size: 18px;
+    display: block;
+    width: 100%;
+  }
+
+  .subnav.active {
+    &:hover {
+      border: none;
+    }
+
+    li:first-child {
+      margin: 30px 0;
     }
   }
 }
@@ -166,3 +188,40 @@ a.venue-name {
       display: none;
   }
 }
+
+.arrow {
+  display:block;
+  height:20px;
+  text-decoration:none;
+
+  &::before {
+    content: '';
+    background:url('../../../assets/img/chevron-arrow-down.png');
+    background-size:cover;
+    position:absolute;
+    width: 15px;
+    height: 15px;
+    margin-left: 68px;
+    margin-top: 5px;
+  }
+
+  &-down {
+    &::before {
+      transform: rotate(180deg);
+    }
+
+    &:hover {
+      border-bottom: none;
+    }
+  }
+}
+
+.subnav {
+  padding: 10px 0;
+  &:hover {
+    border-bottom: 2px solid $color-light-red;
+    width: 90%;
+    transition: 0.2s;
+  }
+}
+
